# libinput-tablet-debugger

./: .gitignore  CMakeLists.txt  COPYING  README.md
src/: CMakeLists.txt  field_locations.h  fields.h  main.c
